refactor(gui): migrate to StrategyCarrier in MainPanelListenerAssistant
  Replace the direct field access
    ((StrategicTablePotential) eval.getUtility()).strategyTrees[0]
  with the interface accessor
    ((StrategyCarrier) eval.getUtility()).getStrategyTrees()[0]

  Remove the now-unused StrategicTablePotential import.